discussion/kv_engine/177065/177065_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: FCManager API takes not-null DcpConsumer*

Change-Id: I12a05d2ad22dedec2fe82a5027eea4be0d5546d8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-05 08:22:56.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-05 09:09:24.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18662/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:23:29: error: out-of-line definition of "newConsumer" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
void DcpFlowControlManager::newConsumer(gsl::not_null<DcpConsumer*> consumer) {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:35:29: error: out-of-line definition of "handleDisconnect" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
void DcpFlowControlManager::handleDisconnect(
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:39:22: error: expected parameter declarator [clang-diagnostic-error]
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:39:22: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:39:50: error: expected ")" [clang-diagnostic-error]
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:39:21: note: to match this "("
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:41:27: error: expected parameter declarator [clang-diagnostic-error]
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:41:27: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:41:55: error: expected ")" [clang-diagnostic-error]
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:41:26: note: to match this "("
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:55:25: error: template argument for template type parameter must be a type [clang-diagnostic-error]
    folly::Synchronized<std::set<DcpConsumer*>> consumers;
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Synchronized.h:563:17: note: template parameter is declared here
template <class T, class Mutex = SharedMutex>
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:55:30: error: no template named "set" in namespace "std"; did you mean "get"? [clang-diagnostic-error]
    folly::Synchronized<std::set<DcpConsumer*>> consumers;
                             ^~~
                             get
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/utility:223:5: note: "get" declared here
    get(std::pair<_Tp1, _Tp2>& __in) noexcept
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18662/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:23:29:
error: out-of-line definition of "newConsumer" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18662/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39863/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:55:30:
error: no template named "set" in namespace "std"; did you mean "get"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39863/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19782/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19782/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21559/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrNo_JsonYes_SnappyYes_AlwaysBufferNo":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrNo_JsonYes_SnappyYes_AlwaysBufferNo
[2022-07-05T08:58:30.328Z] unknown file: Failure
[2022-07-05T08:58:30.328Z] C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 2000ms for a response" thrown in the test body.
[2022-07-05T08:58:30.328Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrNo_JsonYes_SnappyYes_AlwaysBufferNo, where GetParam() = (Mcbp, XattrNo, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>, 4-byte object <01-00 00-00>) (2041 ms)
TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrNo_JsonYes_SnappyYes_AlwaysBufferNo
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21559/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17815/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47448/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28938/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8340/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20551/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8438/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20904/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
